tests/testcases/invalid/semantic/36_missing_return_nested_if.ciel
// Error: control may reach end (nested if without complete else chain)
int nested_conditions(int x, int y) {
    if (x > 0) {
        if (y > 0) {
            return 1;
        }
        // Error: inner if missing else
    } else {
        return -1;
    }
    // Control reaches here when x > 0 && y <= 0
}

int main() {
    int result = nested_conditions(5, -3);
    return 0;
}
